{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 11,
  "lineage": "98e87add-b0dc-a544-6810-a919c545ad57",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_web_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0dcb5067f052a63",
            "arn": "arn:aws:ec2:us-east-1:353928175117:instance/i-0864b69595612f485",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0864b69595612f485",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tutorial",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03e813f8df2cae18d",
            "private_dns": "ip-10-0-1-156.ec2.internal",
            "private_ip": "10.0.1.156",
            "public_ip": "44.200.56.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-009ecabc7f676d4db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054ad3ae7ff5a86ee",
            "tags": {
              "Name": "My-Practice VPC"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bd3455df7efabfb7"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.my_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:internet-gateway/igw-0753b6509c76ce351",
            "id": "igw-0753b6509c76ce351",
            "owner_id": "353928175117",
            "tags": {
              "Name": "My Internet Gateway"
            },
            "vpc_id": "vpc-04c02a392dbea993f"
          },
          "dependencies": [
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:route-table/rtb-0d4978bfbb362191b",
            "id": "rtb-0d4978bfbb362191b",
            "owner_id": "353928175117",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0753b6509c76ce351",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0753b6509c76ce351",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "vpc_id": "vpc-04c02a392dbea993f"
          },
          "dependencies": [
            "aws_internet_gateway.my_IGW",
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_public_rt_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea4d05358521b88a",
            "route_table_id": "rtb-0d4978bfbb362191b",
            "subnet_id": "subnet-054ad3ae7ff5a86ee"
          },
          "dependencies": [
            "aws_internet_gateway.my_IGW",
            "aws_route_table.my_public_rt",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:security-group/sg-0bd3455df7efabfb7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd3455df7efabfb7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "HTTP and SSH",
            "name_prefix": "",
            "owner_id": "353928175117",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-04c02a392dbea993f"
          },
          "dependencies": [
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-0c3a4bf9204ec7194",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c3a4bf9204ec7194",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353928175117",
            "tags": {
              "Name": "My Private Subnet"
            },
            "tags_all": {
              "Name": "My Private Subnet"
            },
            "vpc_id": "vpc-04c02a392dbea993f"
          },
          "dependencies": [
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-054ad3ae7ff5a86ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-054ad3ae7ff5a86ee",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353928175117",
            "tags": {
              "Name": "My Public Subnet"
            },
            "tags_all": {
              "Name": "My Public Subnet"
            },
            "vpc_id": "vpc-04c02a392dbea993f"
          },
          "dependencies": [
            "aws_vpc.my_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_custom_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:vpc/vpc-04c02a392dbea993f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c1b8911d374e5c9b",
            "default_route_table_id": "rtb-00d906f4d33f159bb",
            "default_security_group_id": "sg-0a854341ae9ef2158",
            "dhcp_options_id": "dopt-0ff179fee1ba4567e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04c02a392dbea993f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00d906f4d33f159bb",
            "owner_id": "353928175117",
            "tags": {
              "Name": "My VPC"
            },
            "tags_all": {
              "Name": "My VPC"
            }
          }
        }
      ]
    }
  ]
}